     version of RSA_generate_key.
     Added LibreSSL support, patch provided by Alexander Bluhm. Thanks!
     Patch that fixes the support for SSL_set_info_callback and adds
     SSL_CTX_set_info_callback and SSL_set_state. Support for these functions is
     necessary to either detect renegotiation or to enforce
     renegotiation. Contributed by Steffen Ullrich. Thanks!

1.64 2014-06-11
     Fixes for test ocsp.t. Test now does not fail if HTTP::Tiny is not
     installed.
     Fixed repository in META.yml.
     Fixed a problem with SSL_get_peer_cert_chain: if the SSL handshake
     results in an anonymous authentication, like ADH-DES-CBC3-SHA,
     get_peer_cert_chain will not return an empty list, but instead return the
     SSL object. Reported and fixed by Steffen
     Ullrich. Thanks.
     Fixed a problem where patch
     https://git.openssl.org/gitweb/?p=openssl.git;a=commit;h=3009244da47b989c4cc59ba02cf81a4e9d8f8431
     caused a failed test in t/local/33_x509_create_cert.t.

1.63 2014-05-19
     Fixed error in version number in META.yml

1.62 2014-05-19
     Improvements to OCSP support: It turns out that some CA (like Verisign)
     sign the OCSP response with the CA we have in the trust store and don't
     attach this certifcate in the response.  But OpenSSL by itself only
     considers the certificates included in the response and
     SSL_OCSP_response_verify added the certificates in the chain too.
     Now, we also add the trusted CA from the store which
     signed the lowest chain certificate, at least if we could not verify the
     OCSP response without doing it. Patch from Steffen
     Ullrich. Thanks.
     Fixed some compiler warnings.

1.61 2014-05-12
     Changes calloc to Newx and free to Safefree, otherwise there might be
     problems because calloc is done from a different memory pool than free (depends
     on the build options for perl, but seen on Windows). Patch from Steffen
     Ullrich. Thanks.


1.60 2014-05-10