@@ -12,6 +12,8 @@ Revision history for Perl extension Net::SSLeay.
      SSL_CTX_set_info_callback and SSL_set_state. Support for these functions is
      necessary to either detect renegotiation or to enforce
      renegotiation. Contributed by Steffen Ullrich. Thanks!
+     Fixed a problem with SSL_set_state not available on some early OpenSSLs,
+     patched by Steffen Ullrich. Thanks!
 
 1.64 2014-06-11
      Fixes for test ocsp.t. Test now does not fail if HTTP::Tiny is not
